apps/ftch-collab/overlays/aws-us-west-2-cc-smarsh-perf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftch-collab
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ftch-collab
      app.kubernetes.io/instance: ftch-collab
  template:
    spec:
      containers:
        - name: ftch-collab
          resources:
            limits:
              cpu: 2000m
              memory: 4G
              ephemeral-storage: 4G
            requests:
              cpu: 1000m
              memory: 4G
              ephemeral-storage: 1G
